--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/BillingManagementSystem
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\Gota\\Desktop\\Java\\Libraries\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30.jar
+file.reference.rs2xml.jar=C:\\Users\\Gota\\Desktop\\Java\\Libraries\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.30.jar}
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
