--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BillingManagementSystem
 endorsed.classpath=
 excludes=
+file.reference.itext-1.2.3.jar=C:\\Users\\Gota\\Desktop\\Java\\Libraries\\itext-1.2.3.jar
+file.reference.itext.jar=C:\\Users\\Gota\\Desktop\\Java\\Libraries\\itext.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\Gota\\Desktop\\Java\\Libraries\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30.jar
 file.reference.rs2xml.jar=C:\\Users\\Gota\\Desktop\\Java\\Libraries\\rs2xml.jar
 includes=**
@@ -42,7 +44,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.itext-1.2.3.jar}:\
+    ${file.reference.itext.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
